# digitalGenusswand

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
backend_service/: main.py
backend_service/dependencies/: authentification.py  persistence_manager.py
backend_service/routers/: genusswand.py  user.py
data/: persistence_manager.py
data/model/: genusswand.py  strich.py  user.py
static/: constants.js  index.css  index.html  index.js
static/oneGenusswand/: genusswand.css  genusswand.html  genusswand.js
static/util/: modal.js  utils.js
